daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N26_bad_leak_value/T1.hex
86781b6461796c696768742e617574682e7472616e7363726970742e763658402c3c623188816c32b5e802b995976d2ac213855b519823485fa07ecd4dd3ed6a0c14ca6aed8fb673727a80f4ad2ecd6b3b8b5ade5a196afb4876ef9eaa11b3b458400abe01461f1cd73e433371c2a0d15cf4a446ec1f5c7df3a1f6f5d5c401cf8db515cd4bca58ed274e5dbb92c0c54556601427630e37b634b05d7cbde7ce793e1f5840fda9b471dbaa0600dc1359f872e2aecd5d0d4b0f9a60ff0ab13bddd0a105968aa5fdaa51bb8654764f02ed895861ea89870c4dd3e7f0a5b36518b404f5bea9835820311a2b520eb70378a3f4f7451146cbd07b803c3a0cf582d7905609d946d6cdbc584006e160e72f3d521d50d3ed069f6317dfebfd40bdc798e5eaa4b2902e0b414853e06b36fa48b966e865db0d6caec5a804a48d7963d6922f01438587a7b32db712
